<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    cardview:contentPadding="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/create_task_frequency_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/create_task_frequency_delay"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/create_task_frequency"
            android:textSize="18sp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/create_task_frequency_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:hint="@string/create_task_frequency_delay">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:id="@+id/group_frequency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/create_task_frequency_delay"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_task_frequency_hours"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_task_frequency_minutes"/>

        </RadioGroup>

    </RelativeLayout>

</android.support.v7.widget.CardView>